# ApartmentAccounting

./: .gitignore  account.sqlite
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: deploy.yaml  pr-verify.yaml  update-db.yaml
accounter/: Cargo.toml  out.md
accounter/src/: main.rs
accounter/test/add-items/: desired-output.txt  desired-table.md  p1-0.csv  p2-0.csv  p2-1.csv  p3-0.csv  p3-1.csv
accounter/test/invalid/: missing-decimal.csv  too-short.csv
requests/: README.md
