[package]
name = "accounter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
csv = "1.1"
sqlite = "0.27"
clap = { version = "3.2", features = ["derive"] }
serde = { version = "1", features = ["derive"] }

